Fixed an issue where the page header height was getting collapsed in responsive layouts.

--- a/app/assets/stylesheets/cartilage/responsive.less
+++ b/app/assets/stylesheets/cartilage/responsive.less
@@ -60,7 +60,6 @@
     #page-header
     {
       position: relative;
-      height: auto;
 
       // Actions Button
       .btn-actions
